# quadruped_ros2

./: .gitmodules  README.md  create_mujoco_model.py  step_plot.py
bmx160_serial_hardware_interface/: CMakeLists.txt  bmx160_serial_hardware_interface.xml  package.xml
bmx160_serial_hardware_interface/firmware/: main.ino
bmx160_serial_hardware_interface/firmware/main/: main.ino
bmx160_serial_hardware_interface/include/bmx160_serial_hardware_interface/: bmx160_serial.hpp  bmx160_serial_hardware_interface.hpp  visibility_control.h
bmx160_serial_hardware_interface/src/: bmx160_serial.cpp  bmx160_serial_hardware_interface.cpp
bmx160_serial_hardware_interface/test/: test_bmx160_serial_hardware_interface.cpp
docker/: Dockerfile  compose.yaml
joint_state_broadcaster/include/joint_state_broadcaster/: joint_state_broadcaster.hpp
joint_state_broadcaster/src/: joint_state_broadcaster.cpp  joint_state_broadcaster_parameters.yaml
md80_hardware_interface/: .gitmodules  CMakeLists.txt  README.md  md80_hardware_interface.xml  package.xml
md80_hardware_interface/config/: AK80-9.cfg  ros2_controllers.yaml
md80_hardware_interface/include/md80_hardware_interface/: md80_hardware_interface.hpp
md80_hardware_interface/launch/: ros2_control.launch.py
md80_hardware_interface/scripts/: flash_motors.py
md80_hardware_interface/src/: md80_hardware_interface.cpp
md80_hardware_interface/urdf/: ros2_control.urdf.xacro
mujoco_ros2_control/mujoco_ros2_control/: CMakeLists.txt  package.xml
mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_ros2_control_node.cpp
mujoco_ros2_control/mujoco_ros2_control_demos/config/: position_controller.yaml
mujoco_ros2_control/mujoco_ros2_control_demos/launch/: dynamics.py  four_bar_kinematics.py  impedance_controller.py  quadruped.launch.py
mujoco_ros2_control/mujoco_ros2_control_demos/mujoco_models/: one_leg.xml  quadruped copy.xml  quadruped.xml  se.xml
mujoco_ros2_control/mujoco_ros2_control_demos/urdf/: one_leg.urdf  quadruped_to_mujoco.urdf  quadruped_to_pinicchio.urdf
quadbar_kinematics/: CMakeLists.txt  package.xml  plugin.xml
quadbar_kinematics/include/quadbar_kinematics/: leg.hpp  quadbar_kinematics.hpp
quadbar_kinematics/src/: leg.cpp  quadbar_kinematics.cpp
quadruped_controller/: CMakeLists.txt  README.md  package.xml  quadruped_controller.xml
quadruped_controller/config/: controllers.yaml  hardware.yaml  jtc_controllers.yaml
quadruped_controller/include/quadruped_controller/: leg.hpp  quadruped_controller.hpp  validate_quadruped_controller_parameters.hpp  visibility_control.h  visualization.hpp
quadruped_controller/launch/: controller.launch.py  hardware.launch.py  quadruped_controller.launch.py
quadruped_controller/scripts/: plot_generated_trajectory.py  stand_up.py  traj_plotter.py  twist_to_trajectory.py  zero_encoders.py
quadruped_controller/src/: base_inverse_kinematics.cpp  controller.cpp  effector_joint_state_publisher.cpp  inverse_kinematics_test.cpp  leg.cpp  quadruped_controller.cpp  quadruped_controller.yaml
quadruped_controller/test/: quadruped_controller_params.yaml  quadruped_controller_preceeding_params.yaml  test_load_quadruped_controller.cpp  test_quadruped_controller.cpp  test_quadruped_controller.hpp  test_quadruped_controller_preceeding.cpp
quadruped_joy/: package.xml  setup.cfg  setup.py
quadruped_joy/config/: quadruped_joy_params.yaml
quadruped_joy/launch/: quadruped_joy_launch.py
quadruped_joy/quadruped_joy/: quadruped_joy.py
quadruped_msgs/: CMakeLists.txt  package.xml
quadruped_msgs/msg/: QuadrupedControl.msg
quadruped_robot_description/: CMakeLists.txt  package.xml
quadruped_robot_description/launch/: bringup.launch.py  joint_trajectory.launch.py  robot_state_publisher.launch.py  simulation.launch.py
quadruped_robot_description/meshes/: fifth_link.dae  fifth_link.stl  fifth_link_merged.dae  first_link.dae  first_link.stl  second_link.dae  second_link.stl
quadruped_robot_description/rviz/: empty.sdf  quadruped_robot.rviz
quadruped_robot_description/urdf/: gazebo.urdf.xacro  inertia.urdf.xacro  leg.urdf.xacro  quadruped_robot.urdf.xacro  ros2_control.urdf.xacro  tight_link.urdf.xacro
