<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>md80_hardware_interface</name>
  <version>0.1.0</version>
  <description>Hardware interface for MD80 BLDC motor</description>
  <maintainer email="delicat.kuba@gmail.com">Jakub Delicat</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
