<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadruped_controller</name>
  <version>0.0.1</version>
  <description>ros2_control quadruped robot controller with 4 bar linkage</description>
  <maintainer email="delicat.kuba@gmail.com">Jakub Delicat</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>x

  <build_depend>generate_parameter_library</build_depend>

  <depend>control_msgs</depend>

  <depend>controller_interface</depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>

  <depend>realtime_tools</depend>

  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>quadruped_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
